@@ -110,6 +110,7 @@ convert_tabs false
 strip_trailing_whitespace_on_save true
 # Ensures saved files end with a newline character by adding it if necessary:
 eof_newline false
+save_backup_files false
 
 diff_command diff -U 5
 
