@@ -4,6 +4,7 @@ Diakonos Changelog
 0.9.3
 
 - Tab completion of paths now uses session dir.
+- save_backup_files setting (default false).
 
 0.9.2
 
